# conan-ParallelSTL

./: CMakeLists.txt  README.md  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  example.cpp
